@@ -1,3 +1,8 @@
+2004-07-01  Greg Troxel  <gdt@fnord.ir.bbn.com>
+
+	* ripng_interface.c (ripng_multicast_join): Use privs to do join,
+	to work around bug on gif(4) on NetBSD 1.6.2.
+
 2004-05-11 Paul Jakma <paul@dishone.st>
 
 	* ripng_nexthop.h: SUNOS_5 does not define s6_addr32
